src/test/deca/syntax/invalid/expr/test_expr_sum_two_plus.deca
// Description:
//    tests de programme syntaxiquement incorrects : plus d'un operateur
//
// Resultats:
//    Ligne 13: no viable alternative at input 'a'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a ++ 1 == 3) {
        a = 2;
    }
}